--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,38 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  width: 100%;
+  max-width: 1170px;
+  margin: 0 auto;
+  padding: 0 15px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.bold {
+  font: bold;
+}
+.italic {
+  font: italic;
+}
+.normal {
+  font: normal;
+  color: black;
+  text-decoration: none;
+}
+#editline{
+  text-align: center;
+}
+textarea {
+  width: 272px;
+  height: 71px;
+  resize: none;
+}
+.red {
+  color: red;
+}
+.black {
+  color: black;
+}
+.underline {
+  text-decoration: underline;
 }
